<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.josesanjuanelo.tallerlistview.carroMasEconomico">

    <TableLayout
        android:id="@+id/tblCarros2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/lblId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:textAlignment="viewStart" />

            <TextView
                android:id="@+id/lblPlaca"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placa"
                android:textAlignment="viewStart" />

            <TextView
                android:id="@+id/lblMarca"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/marca"
                android:textAlignment="viewStart" />

            <TextView
                android:id="@+id/lblModelo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/modelo"
                android:textAlignment="viewStart" />

            <TextView
                android:id="@+id/lblPrecio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/precio"
                android:textAlignment="viewStart" />
        </TableRow>

    </TableLayout>
</RelativeLayout>
