<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imgFoto"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            app:srcCompat="@drawable/toyota" />

        <TextView
            android:id="@+id/lblPlacaCarro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="22dp"
            android:layout_toEndOf="@+id/textView8"
            android:layout_toRightOf="@+id/textView8"
            android:text="TextView"
            android:textSize="20sp"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/lblMarcaCarro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/lblPlacaCarro"
            android:layout_alignStart="@+id/lblPlacaCarro"
            android:layout_below="@+id/lblPlacaCarro"
            android:layout_marginTop="13dp"
            android:text="TextView"
            android:textSize="20sp"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/lblModeloCarro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/lblMarcaCarro"
            android:layout_alignStart="@+id/lblMarcaCarro"
            android:layout_below="@+id/lblMarcaCarro"
            android:layout_marginTop="16dp"
            android:text="TextView"
            android:textSize="20sp"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/lblPrecioCarro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView9"
            android:layout_alignBottom="@+id/textView9"
            android:layout_toRightOf="@+id/textView8"
            android:text="TextView"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/lblMarcaCarro"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp"
            android:layout_toEndOf="@+id/imgFoto"
            android:layout_toRightOf="@+id/imgFoto"
            android:text="@string/placa"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/lblMarcaCarro"
            android:layout_alignLeft="@+id/textView6"
            android:layout_alignStart="@+id/textView6"
            android:text="@string/marca"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/lblModeloCarro"
            android:layout_alignLeft="@+id/textView7"
            android:layout_alignStart="@+id/textView7"
            android:layout_below="@+id/textView7"
            android:layout_marginTop="14dp"
            android:text="@string/modelo"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imgFoto"
            android:layout_alignEnd="@+id/textView7"
            android:layout_alignRight="@+id/textView7"
            android:text="@string/precio"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>
</LinearLayout>